@startuml Produto
Class Produto{
    - nome:str 
    - preco:float 
    - quantidade:int 

    +operacao(): str
}

class Software {
    -licenca: str

    +operacao(): str
}

class Hardware{
    -garantia: int

    +operacao(): str
}
Software -- Hardware
    left to right direction
Produto <--(Software, Hardware)

@enduml